2010-09-15  Piotr Fusik  <fox@scene.pl>
* csharp/ASAP.ppcs, csharp/asap2wav.cs, csharp/asapplay.cs,
  csharp/SilverASAP.cs: changed namespace and player class

* gsplayer, win32/gsplayer, win32/Makefile, win32/wince/USAGE, INSTALL:
  gsplayer moved to win32

* win32/Makefile, win32/wasap/wasap.c, win32/info_dlg.c, win32/info_dlg.h,
  win32/gui.rc, PORTS.xml: WASAP ported to Windows Mobile

* asap-sdl.c, asap_sdl.c, Makefile, win32/Makefile: renamed asap_sdl
  to asap-sdl, added Makefile target

* java/ASAPMIDlet.java, java/ASAP.ppjava, asap.c: removed "small streams" code
  because I can't make it play smoothly


2010-09-02  Piotr Fusik  <fox@scene.pl>
* csharp/SilverASAP.cs: the problem with fast clicks in Opera hopefully fixed

* audacious/asapplug.c, Makefile, README, INSTALL, PORTS.xml:
  created Audacious plugin


2010-08-25  Piotr Fusik  <fox@scene.pl>
* asap_sdl.c, win32/Makefile: simple command-line player using SDL


2010-08-24  Piotr Fusik  <fox@scene.pl>
* javascript/asap2wav.ppjs, README, INSTALL: added support for JaegerMonkey


2010-08-20  Piotr Fusik  <fox@scene.pl>
* javascript/asap2wav.ppjs, javascript/Makefile, README:
  added support for JScript .NET


2010-08-19  Piotr Fusik  <fox@scene.pl>
* javascript/asap2wav.ppjs, README, PORTS.xml: added support for Google V8 shell


2010-08-17  Piotr Fusik  <fox@scene.pl>
* javascript/asap2wav.ppjs, README, PORTS.xml: added support for Rhino Shell


2010-08-16  Piotr Fusik  <fox@scene.pl>
* asap.spec, Makefile, win32/Makefile: build RPM for Linux

* win32/Makefile, win32/apollo/ASAP_Apollo.cpp, win32/shellex/ASAPShellEx.cpp,
  win32/wasap/wasap.c: prevented gcc 4.5.0 warnings

* win32/Makefile: added SilverASAP to www

* csharp/SilverASAP.cs: lots of fast "Play" clicks could start multiple songs
  (reported by Slaves)

* java/Makefile: re-compress *.jar with 7-Zip


2010-08-15  Piotr Fusik  <fox@scene.pl>
* java/asap2wav.MF, java/asap_midlet.MF: added "Manifest-Version"

